# HHS-Group-3-DVU

./: .gitattributes  .gitignore  .tool-versions  README.md
.github/: CODEOWNERS
.github/actions/ci-frontend/: action.yml
.github/workflows/: pull-request.yml  push-main.yml
Backend/: Dockerfile  README.md  pyproject.toml
Backend/db/models/: basemodel.py  encounter.py  patient.py  user.py
Backend/project/: main.py
Backend/project/routes/: auth.py  encounters.py  mails.py  patients.py
Backend/project/services/: auth_service.py  encounter_service.py  patients_service.py
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/project/: auth_setup.py  config.py  globals.py  gobals.py  main.py
backend/project/db/models/: basemodel.py  details.py  mail.py  patient.py  patient_base.py  user.py
backend/project/middleware/: cors.py
backend/project/routes/: auth.py  encounters.py  mails.py  patients.py
backend/project/services/: auth_service.py  encounter_service.py  mail_service.py  patients_service.py
epd/: .dockerignore  .env.docker  .env.docker.example  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  docker-entrypoint.sh  jest.config.js  openapi.yaml  package-lock.json  package.json  prisma.config.ts  start.ps1  start.sh  test-m2m.ts  tsconfig.json  tsconfig.seed.json
epd/backend/src/: index.ts
epd/docs/: AUTH0_MIGRATION.md  AUTHENTICATION.md  DATABASE_MIGRATION_STRATEGY.md
epd/prisma/: schema.prisma  seed.ts
epd/scripts/: exportSwagger.ts
epd/tests/: README.md  setup.ts  tsconfig.json
epd/tests/allergies/: allergy.test.ts
epd/tests/appointments/: appointment.test.ts
epd/tests/auth/: auth.test.ts
epd/tests/diagnoses/: diagnosis.test.ts
epd/tests/encounters/: encounter.test.ts
epd/tests/helpers/: auth0.helper.ts
epd/tests/insurance/: insurance.test.ts
epd/tests/lab-results/: labResult.test.ts
epd/tests/medical-records/: medicalRecord.test.ts
epd/tests/medications/: medication.test.ts
frontend/: .dockerignore  .mise.toml  .prettierignore  .prettierrc  README.md  eslint.config.js  howTo-miseToml.txt  index.html  orval.config.ts  package-lock.json  package.json  tsconfig-readme.txt  tsconfig.app.json  tsconfig.json  tsconfig.spec.json  vite.config.ts
frontend/.docker/: Dockerfile  README.md  compose.yml  default.conf  nginx.conf
frontend/models/: diabetes-types.ts  index.ts  patient.builder.ts  patient.model.ts
frontend/pages/: HelloPlaceholder.txt
frontend/public/: style.css
frontend/react/: package-lock.json
frontend/reactvite/: package-lock.json
frontend/src/: .env.template  App.tsx  counter.ts  env.d.ts  index.html  main.tsx  style.css
frontend/utils/: index.ts  try-catch.ts
install-scripts/: Frontend - Initiële opzet.docx  installatiestappen.txt  readme-keuzes en stappen.txt
mail/: .env.example  .gitignore  README.md  docker-compose.yml  jest.config.js  openapi.yaml  package-lock.json  package.json  start.ps1  start.sh  test-m2m.ts  tsconfig.json
mail/prisma/: schema.prisma  seed.ts
mail/src/: index.ts
mail/test/: README.md  api.test.ts  auth.test.ts  authRoutes.test.ts  authService.test.ts  helpers.ts
pages/: todo-readme.txt
tests/: JMeter_Develop_DVU.jmx
util/development-requests/: Tspec-DVU-Casus.xlsx
util/tests/: JMeter_Develop_DVU.jmx
(+242 files in other folders)
